add shingleindex
